--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native": "0.62.2",
     "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-paper": "^3.10.1",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.2",
